# tutors_assistant

./: .env.dist  .gitignore  docker-compose.yml  pyproject.toml
nginx/: Dockerfile  nginx.conf
tutors_assistant/: Dockerfile  consumer.py  logger_conf.py  manage.py  pyproject.toml
tutors_assistant/admin/bot_config/: admin.py  apps.py  models.py
tutors_assistant/admin/bot_config/migrations/: 0001_initial.py
tutors_assistant/admin/config/: asgi.py  settings.py  wsgi.py
tutors_assistant/admin/homeworks/: apps.py  managers.py  signals.py  utils.py
tutors_assistant/admin/homeworks/admin/: __init__.py  homework_admin.py  homework_answer_inline.py  homework_files_inline.py  homework_module_admin.py  (+1 more)
tutors_assistant/admin/users/: admin.py  apps.py
tutors_assistant/admin/utils/: __init__.py  producer_rabbitmq.py
tutors_assistant/bot/: __init__.py  loader.py  standard_bot_answers.py
tutors_assistant/bot/db_api/: __init__.py  django_async.py
tutors_assistant/bot/filters/: __init__.py  registration.py
tutors_assistant/bot/handlers/: __init__.py  homeworks.py  menu.py  registration.py  resources.py  timetable.py
tutors_assistant/bot/keyboards/: __init__.py  base_menu.py  homeworks.py  resources.py  timetable.py
tutors_assistant/bot/middlewares/: __init__.py  registration.py
tutors_assistant/bot/states/: __init__.py  homework_answer.py  menu.py  registration.py
tutors_assistant/bot/utils/: __init__.py  build_homework_answer.py  build_homework_text.py  on_startup.py
tutors_assistant/rabbitmq_utils/: __init__.py  message.py  send_message.py
(+24 files in other folders)
